Refactor admin_dashboard.html to update the column header for Porcentaje Asistencia in the admin dashboard and rh_dashboard.html

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -431,8 +431,8 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
             <div class="flex flex-row -mx-3">
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
-                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Activos</p>
-                  <h5 class="mb-2 font-bold dark:text-white"> ${data.jornadas_completas_week}</h5>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Porcentaje Asistencia</p>
+                  <h5 class="mb-2 font-bold dark:text-white"> ${data.porcentaje}%</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-red-600"></span>
                   </p>
