Refactor admin_dashboard.html and rh_dashboard.html to update obra selection functionality

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -374,7 +374,7 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
       url: "/summary-data/",
       method: "GET",
       data: {
-        'time_range': timeRange || 'weekly',
+        'time_range': timeRange,
         'conjunto': conjunto
       },
       success: function (response) {
